--- a/pipelines/production/comCamRapidAnalysisDanishPipeline.yaml
+++ b/pipelines/production/comCamRapidAnalysisDanishPipeline.yaml
@@ -16,6 +16,7 @@ tasks:
       estimateZernikes.binning: 2
       estimateZernikes.nollIndices:
         [4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 20, 21, 22, 27, 28]
+      estimateZernikes.saveHistory: true
 
 # Define pipeline steps
 subsets:
