Declare isr in pipeline before referencing it

--- a/pipelines/_ingredients/wepDirectDetectScienceGroupPipeline.yaml
+++ b/pipelines/_ingredients/wepDirectDetectScienceGroupPipeline.yaml
@@ -1,6 +1,8 @@
 description: wep direct detect pipeline
 
 tasks:
+  isr:
+    class: lsst.ip.isr.IsrTaskLSST
   generateDonutDirectDetectTask:
     class: lsst.ts.wep.task.generateDonutDirectDetectTask.GenerateDonutDirectDetectTask
     config:
