--- a/pipelines/_ingredients/wepDirectDetectScienceGroupPipeline.yaml
+++ b/pipelines/_ingredients/wepDirectDetectScienceGroupPipeline.yaml
@@ -6,10 +6,10 @@ tasks:
     config:
       # Although we don't have to apply the amp offset corrections, we do want
       # to compute them for analyzeAmpOffsetMetadata to report on as metrics.
-      doAmpOffset: true
-      ampOffset.doApplyAmpOffset: false
+      doAmpOffset: True
+      ampOffset.doApplyAmpOffset: False
       # Turn off slow steps in ISR
-      doBrighterFatter: false
+      doBrighterFatter: False
       # Mask saturated pixels,
       # but turn off quadratic crosstalk because it's currently broken
       doSaturation: True
