--- a/tests/testData/pipelineConfigs/testCalcZernikesLatissPipeline.yaml
+++ b/tests/testData/pipelineConfigs/testCalcZernikesLatissPipeline.yaml
@@ -45,3 +45,6 @@ tasks:
       initialCutoutPadding: 40
   calcZernikesTask:
     class: lsst.ts.wep.task.calcZernikesTask.CalcZernikesTask
+    config:
+      doDonutStampSelector: False
+      estimateZernikes.nollIndices: [4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]
