--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ __version__ = "{version}"
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 addopts = "-vsx"
+log_cli_level = "DEBUG"
 
 [project.optional-dependencies]
 dev = ["documenteer[pipelines]"]
