--- a/.ts_pre_commit_config.yaml
+++ b/.ts_pre_commit_config.yaml
@@ -1,8 +1,8 @@
-black: true
+black: false
 clang-format: false
-flake8: true
+flake8: false
 format-xmllint: true
-isort: true
+isort: false
 mypy: false
 check-yaml: true
 check-xml: true
