Add global pretest that runs WEP for CWFS tests only once.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ __version__ = "{version}"
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
-addopts = "-vsx --capture=no"
+addopts = "-vsx --capture=no --run-pretest"
 log_cli_level = "DEBUG"
 
 [project.optional-dependencies]
